--- a/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
+++ b/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "dsCpwji3I8lhL6TLRsHUyG",
+    "id" : "5ngOc24acu5ixLzTdSQ6Wk",
     "name" : "InlineActionsProjectDepen",
     "type" : "Project",
     "metadata" : {
