--- a/Explore/00_swati/.00_swati.Project.json
+++ b/Explore/00_swati/.00_swati.Project.json
@@ -11,7 +11,7 @@
       "repoInfo" : null,
       "contextAttributes" : [ ],
       "additionalInfo" : {
-        "description" : "",
+        "description" : "added desc",
         "contentType" : "Binary",
         "documentState" : "COMPLETE"
       }
