--- a/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
+++ b/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "e6cFYCFh06RldPkXdJ1I8p",
+    "id" : "kjlsStvKTQad3YtFw6Mg2d",
     "name" : "InlineActionsProjectDepen",
     "type" : "Project",
     "metadata" : {
