--- a/Explore/Default/.Default.Project.json
+++ b/Explore/Default/.Default.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "2wvikV0dqBsbHIm1O63TkI",
+    "id" : "5qSKBJwRmqrfDECvgzpN03",
     "name" : "Default",
     "type" : "Project",
     "metadata" : {
