--- a/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
+++ b/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "5eRb1y3Tgkdly1pFbeHugj",
+    "id" : "4lZJhzOiMcYkOElIl4wOQW",
     "name" : "InlineActionsProjectDepen",
     "type" : "Project",
     "metadata" : {
