--- a/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
+++ b/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "4lZJhzOiMcYkOElIl4wOQW",
+    "id" : "i8N76J2OMCjldBFBtnLCal",
     "name" : "InlineActionsProjectDepen",
     "type" : "Project",
     "metadata" : {
