--- a/Explore/ObjectDependency/.ObjectDependency.Project.json
+++ b/Explore/ObjectDependency/.ObjectDependency.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "dhlg2ODOX6SebkXJrsCXqJ",
+    "id" : "fJGmeAufK8plyM7KrI52Qy",
     "name" : "ObjectDependency",
     "type" : "Project",
     "metadata" : {
