--- a/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
+++ b/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "if1Bui41Q8ljvAspYMSoAB",
+    "id" : "7WAcNfVRTxDi3mWjm7Bl6f",
     "name" : "InlineActionsProjectDepen",
     "type" : "Project",
     "metadata" : {
