--- a/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
+++ b/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "341FPK8vvYhlxsi5JDwRIx",
+    "id" : "lVIaerDvSMxkb5nmvZESUk",
     "name" : "InlineActionsProjectDepen",
     "type" : "Project",
     "metadata" : {
