--- a/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
+++ b/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "2IymAQzCx1ifEB5uS7Bceg",
+    "id" : "aSFBVmp9BSUaZzGx6nO7Il",
     "name" : "InlineActionsProjectDepen",
     "type" : "Project",
     "metadata" : {
