--- a/Explore/Default/.Default.Project.json
+++ b/Explore/Default/.Default.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "6PKkDp0Ci1ogm8qYWSstMf",
+    "id" : "gqTcYOXcXmXcJazfdiwI4e",
     "name" : "Default",
     "type" : "Project",
     "metadata" : {
