--- a/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
+++ b/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "8pGYqMmt215k2kVaw89dWc",
+    "id" : "4o3jlKzBr8FeXxJjNDmYMm",
     "name" : "InlineActionsProjectDepen",
     "type" : "Project",
     "metadata" : {
