--- a/Explore/VCS_PROJ_AUTO/.VCS_PROJ_AUTO.Project.json
+++ b/Explore/VCS_PROJ_AUTO/.VCS_PROJ_AUTO.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "47wZU4blWfmeTed5mktpYr",
+    "id" : "9IcHET2M6WWdSeXdIEs5sY",
     "name" : "VCS_PROJ_AUTO",
     "type" : "Project",
     "metadata" : {
