--- a/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
+++ b/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "lOIvVWrMlYCk3pTd9aAVo6",
+    "id" : "6Ijxam2rj9hgtWayBoi72X",
     "name" : "InlineActionsProjectDepen",
     "type" : "Project",
     "metadata" : {
