--- a/Explore/dependencies_delete/.dependencies_delete.Project.json
+++ b/Explore/dependencies_delete/.dependencies_delete.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "929CiFUJVlxdS6xVbsaog7",
+    "id" : "3Sf6YqdcNAgd8Ncl5ASRiJ",
     "name" : "dependencies_delete",
     "type" : "Project",
     "metadata" : {
