Automation summary for Force Undo Checkout testsMWJmZmMyODktMTkzMy00Nz
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "23tPT3NkcoEjMqaSW4JNgf",
+    "id" : "eBxOgaNuGQDfEAAIBO0dSk",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
