Automation summary DepUI CMDZTk2YzRjZWUtY2NhOC00Nj0
Automation Desc

--- a/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
+++ b/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "3XDxPwXdpXJfDBSmJr9qY0",
+    "id" : "lOIvVWrMlYCk3pTd9aAVo6",
     "name" : "InlineActionsProjectDepen",
     "type" : "Project",
     "metadata" : {
