--- a/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
+++ b/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "lOIvVWrMlYCk3pTd9aAVo6",
+    "id" : "9R6Rti8azDykvaRfH7DD2a",
     "name" : "InlineActionsProjectDepen",
     "type" : "Project",
     "metadata" : {
