Automation summary for Force Undo Checkout testsNGM1Njg3OTQtOWI0Yy00NW
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "eBxOgaNuGQDfEAAIBO0dSk",
+    "id" : "0hP6hnJsdomdBZA73TKAqx",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
