Automation summary for Force Undo Checkout testsMzkwMjg1YTktN2MwOS00Mm
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "fH63pv9K4cFiqVEt6d4kkv",
+    "id" : "2ylQl14Ua10l5Q5T3GjN4n",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
