--- a/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
+++ b/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "lVIaerDvSMxkb5nmvZESUk",
+    "id" : "7C1HwjmSBETkNr2aogCQQB",
     "name" : "InlineActionsProjectDepen",
     "type" : "Project",
     "metadata" : {
