--- a/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
+++ b/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "3bsWEWjpGYwfCE8DynuiQM",
+    "id" : "dPf4t5CXsQzeYApfugLWqL",
     "name" : "InlineActionsProjectDepen",
     "type" : "Project",
     "metadata" : {
