--- a/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
+++ b/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "dPf4t5CXsQzeYApfugLWqL",
+    "id" : "0I7Zf2CPED3l7yinaQ2O4z",
     "name" : "InlineActionsProjectDepen",
     "type" : "Project",
     "metadata" : {
