--- a/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
+++ b/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "0I7Zf2CPED3l7yinaQ2O4z",
+    "id" : "6w5yryIw2MPdVP2K1fMK66",
     "name" : "InlineActionsProjectDepen",
     "type" : "Project",
     "metadata" : {
