--- a/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
+++ b/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "6w5yryIw2MPdVP2K1fMK66",
+    "id" : "hgwCMCD1KMGf6X94EqzeyF",
     "name" : "InlineActionsProjectDepen",
     "type" : "Project",
     "metadata" : {
