--- a/Explore/VCS_DRS_ZDT/.VCS_DRS_ZDT.Project.json
+++ b/Explore/VCS_DRS_ZDT/.VCS_DRS_ZDT.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "1sYMed5bZvGcNIsX293toI",
+    "id" : "jFPESa3QmuMdPKmVlcXzKu",
     "name" : "VCS_DRS_ZDT",
     "type" : "Project",
     "metadata" : {
